fix spacing between paginator and search chip

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -23,3 +23,7 @@
 .chip-list {
   padding-top: 8px;
 }
+
+md-paginator {
+  margin-bottom: 8px;
+}
